--- a/lamp.html
+++ b/lamp.html
@@ -56,33 +56,23 @@ respond.min.js"></script>
 		<div class="content">
 					<div class="row" id="header-lamp">
 						<div class="col-xs-3 col-md-3 col-lg-3"><h4 class="text-center"><strong>Ruang</strong></h4></div>
-						<div class="col-xs-3 col-md-3 col-lg-3"><h4 class="text-center"><strong>Status Lampu</strong></h4></div>
-						<div class="col-xs-1 col-md-1 col-lg-1"><h4 class="text-center"><strong>Auto</strong></h4></div>
-						<!--<div class="clearfix visible-xs"></div>-->
-
-						<div class="col-xs-2 col-md-2 col-lg-2"><h4 class="text-center"><strong>ON</strong></h4></div>
-						<div class="col-xs-2 col-md-2 col-lg-2"><h4 class="text-center"><strong>OFF</strong></h4></div>
+						<div class="col-xs-2 col-md-2 col-lg-2"><h4 class="text-center"><strong>Auto</strong></h4></div>
+						<div class="col-xs-3 col-md-3 col-lg-3"><h4 class="text-center"><strong>ON</strong></h4></div>
+						<div class="col-xs-3 col-md-3 col-lg-3"><h4 class="text-center"><strong>OFF</strong></h4></div>
 						<div class="col-xs-1 col-md-1 col-lg-1"></div>
 					</div>
+					
 					<br>
 					<!-- ----------LAMPU 0---------- -->
 					<div class="row" id="lamp0">
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center"><a color="#aae41e">Ruang Tamu</a></h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch0" onclick="toggleswitch0()">
-								<label class="onoffswitch-label" for="switch0"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto0" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto0" align="center">
 							<input type="checkbox" name="autobox0" onclick="#" >
 						</div>
-					
-	
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on0">
+		
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on0">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -104,7 +94,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off0">
+						<div class="col-xs-3 col-md-3 col-lg-3	" id="off0">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -135,17 +125,10 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Utama</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch1" onclick="toggleswitch1()">
-								<label class="onoffswitch-label" for="switch1"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto1" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto1" align="center">
 							<input type="checkbox" name="autobox1" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on1">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on1">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -167,7 +150,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off1">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off1">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -198,17 +181,10 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Utama</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch2" onclick="toggleswitch2()">
-								<label class="onoffswitch-label" for="switch2"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto2" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto2" align="center">
 							<input type="checkbox" name="autobox2" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on2">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on2">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -230,7 +206,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off2">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off2">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -261,17 +237,10 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Anak</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch3" onclick="toggleswitch3()">
-								<label class="onoffswitch-label" for="switch3"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto3" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto3" align="center">
 							<input type="checkbox" name="autobox3" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on3">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on3">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -285,7 +254,7 @@ respond.min.js"></script>
 										</select>
 									</div>
 									<div class="col-xs-6 col-md-6 col-lg-6">
-										<select class="\">
+										<select class="">
 											<option value="0">0</option><option value="5">5</option><option value="10">10</option>
 											<option value="15">15</option><option value="30">30</option><option value="45">45</option>
 										</select>
@@ -293,7 +262,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off3">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off3">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -324,17 +293,10 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Ruang Keluarga</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch4" onclick="toggleswitch4()">
-								<label class="onoffswitch-label" for="switch4"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto4" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto4" align="center">
 							<input type="checkbox" name="autobox4" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on4">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on4">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -356,7 +318,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off4">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off4">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -388,17 +350,10 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Dapur</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch5" onclick="toggleswitch5()">
-								<label class="onoffswitch-label" for="switch5"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto5" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto5" align="center">
 							<input type="checkbox" name="autobox5" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on5">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on5">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -420,7 +375,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off5">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off5">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -452,17 +407,11 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Garasi</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch6" onclick="toggleswitch6()">
-								<label class="onoffswitch-label" for="switch6"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto6" align="center">
+
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto6" align="center">
 							<input type="checkbox" name="autobox6" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on6">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on6">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -484,7 +433,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off6">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off6">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -516,17 +465,11 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Taman Depan</h4>
 						</div>
-						<div class="col-xs-3 col-md-3 col-lg-3" align="center">
-							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch7" onclick="toggleswitch7()">
-								<label class="onoffswitch-label" for="switch7"><div class="onoffswitch-inner"></div>
-								<div class="onoffswitch-switch"></div></label>
-							</div>
-						</div>
-						<div class="col-xs-1 col-md-1 col-lg-1" id="auto7" align="center">
+
+						<div class="col-xs-2 col-md-2 col-lg-2" id="auto7" align="center">
 							<input type="checkbox" name="autobox7" onclick="#" >
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="on7">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="on7">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
@@ -548,7 +491,7 @@ respond.min.js"></script>
 								</div>
 							</form>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="off7">
+						<div class="col-xs-3 col-md-3 col-lg-3" id="off7">
 							<form role="form">
 								<div class="row">
 									<div class="col-xs-6 col-md-6 col-lg-6">
