--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 	var mcp;
 	var mcp2;
 	var mcp3;
+	var tmp;
 	webiopi().ready(init);
 	
 	// function init() defines function passed to webiopi().ready()
@@ -21,15 +22,16 @@
 		mcp = new GPIOPort("mcp");
         mcp2 = new GPIOPort("mcp2");
 		mcp3 = new GPIOPort("mcp3");
+		tmp = new Temperature("tmp");
 		
 		// refresh UI each seconds
 		setInterval(updateUI, 3000);
+		setInterval(updateUI2, 100);
         }
 		
-		
-    // function called through setInterval
+	// function called through setInterval
     function updateUI() {
-	// call MCP.digitalRead 0 to 7 REST API
+	 // call MCP.digitalRead 0 to 7 REST API
 		if (mcp.isReady()) {
 			for (var i=0;i<8;i++)
 			{
@@ -38,7 +40,21 @@
 			mcp3.digitalRead(i, DigitalCallback3);
 			}
 	        }
-	    }
+	    }		
+		
+    // function called through setInterval
+    function updateUI2() {function updateUI() {
+                // call Temperature.getCelsius REST API
+                // result is asynchronously displayed using the callback
+                tmp.getCelsius(temperatureCallback);
+        }       
+	
+	// callback function used to display the temperature
+    function temperatureCallback(sensorName, data) {
+                // jQuery functions
+                $("#showtemp").text(data + "°C");
+        }
+	
 </script>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
 queries -->
@@ -83,6 +99,8 @@ respond.min.js"></script>
 		<div class="row">
 			<div class="col-sm-9 col-md-6 col-lg-6">
 				<div class="content" id="content-lamp">
+					<h3 align="left"><strong>Lampu</strong></h3>
+					<br>
 					<div class="row" id="header-lamp">
 						<div class="col-xs-5 col-md-5 col-lg-5"><h4 class="text-center"><strong>Ruang</strong></h4></div>
 						<div class="col-xs-4 col-md-4 col-lg-4"><h4 class="text-center"><strong>Status Lampu</strong></h4></div>
@@ -240,10 +258,11 @@ respond.min.js"></script>
 			<div class="col-sm-3 col-md-6 col-lg-6">
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-12">
-						<div class="content">
-							<div class="video">
-								this is temperature
-							</div>
+						<div class="content" >
+							<h3 align="left"><strong>Temperature</strong></h3>
+							<br>
+							<p align="center"><button class="btn btn-lg" id="showtemp"></button></p>
+							<br>
 							<p align="right"><a href="temperature.html">setting temperatur</a></p>
 						</div>
 					</div>
@@ -252,6 +271,8 @@ respond.min.js"></script>
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-12" >
 						<div class="content">
+						<h3 align="left"><strong>Shortcut</strong></h3	>
+						<br>
 						<form class="form-group" align="center">
 							<button class="btn btn-primary btn-lg" id="btn-home">Home</button>
 							<button class="btn btn-primary btn-lg" id="btn-away">Away</button>
