Update lamp.html plus check box
sudah ditambah checkbox

--- a/lamp.html
+++ b/lamp.html
@@ -16,129 +16,64 @@ via file:// -->
 html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/
 respond.min.js"></script>
-<![endif]-->
+<![endj0if]-->
 
 <!--<script type="text/javascript" src="/webiopi.js"></script>-->
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="update-lamp.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
-		var lampu = [
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-		
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-		
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		},
-
-		{
-		"auto" : "0",
-		"jamon" : "0",
-		"jamoff" : "0",
-		"meniton" : "0",
-		"menitoff" : "0"
-		}];
-		
-
 		$("#ok").click(function(){
 			//var j0 = $("#jam-on0 option:selected").val();
 		//*	
-			lampu[0].jamon = ($("#jam-on0 option:selected").val()).toString();
-			lampu[1].jamon = ($("#jam-on1 option:selected").val()).toString();
-			lampu[2].jamon = ($("#jam-on2 option:selected").val()).toString();
-			lampu[3].jamon = ($("#jam-on3 option:selected").val()).toString();
-			lampu[4].jamon = ($("#jam-on4 option:selected").val()).toString();
-			lampu[5].jamon = ($("#jam-on5 option:selected").val()).toString();
-			lampu[6].jamon = ($("#jam-on6 option:selected").val()).toString();
-			lampu[7].jamon = ($("#jam-on7 option:selected").val()).toString();
+			j0 = ($("#jam-on0 option:selected").val());
+			j1 = ($("#jam-on1 option:selected").val());
+			j2 = ($("#jam-on2 option:selected").val());
+			j3 = ($("#jam-on3 option:selected").val());
+			j4 = ($("#jam-on4 option:selected").val());
+			j5 = ($("#jam-on5 option:selected").val());
+			j6 = ($("#jam-on6 option:selected").val());
+			j7 = ($("#jam-on7 option:selected").val());
 			
-			lampu[0].jamoff = ($("#jam-off0 option:selected").val()).toString();
-			lampu[1].jamoff = ($("#jam-off1 option:selected").val()).toString();
-			lampu[2].jamoff = ($("#jam-off2 option:selected").val()).toString();
-			lampu[3].jamoff = ($("#jam-off3 option:selected").val()).toString();
-			lampu[4].jamoff = ($("#jam-off4 option:selected").val()).toString();
-			lampu[5].jamoff = ($("#jam-off5 option:selected").val()).toString();
-			lampu[6].jamoff = ($("#jam-off6 option:selected").val()).toString();
-			lampu[7].jamoff = ($("#jam-off7 option:selected").val()).toString();
+			jf0 = ($("#jam-off0 option:selected").val());
+			jf1 = ($("#jam-off1 option:selected").val());
+			jf2 = ($("#jam-off2 option:selected").val());
+			jf3 = ($("#jam-off3 option:selected").val());
+			jf4 = ($("#jam-off4 option:selected").val());
+			jf5 = ($("#jam-off5 option:selected").val());
+			jf6 = ($("#jam-off6 option:selected").val());
+			jf7 = ($("#jam-off7 option:selected").val());
 			
-			lampu[0].meniton = ($("#menit-on0 option:selected").val()).toString();
-			lampu[1].meniton = ($("#menit-on1 option:selected").val()).toString();
-			lampu[2].meniton = ($("#menit-on2 option:selected").val()).toString();
-			lampu[3].meniton = ($("#menit-on3 option:selected").val()).toString();
-			lampu[4].meniton = ($("#menit-on4 option:selected").val()).toString();
-			lampu[5].meniton = ($("#menit-on5 option:selected").val()).toString();
-			lampu[6].meniton = ($("#menit-on6 option:selected").val()).toString();
-			lampu[7].meniton = ($("#menit-on7 option:selected").val()).toString();
+			m0 = ($("#menit-on0 option:selected").val());
+			m1 = ($("#menit-on1 option:selected").val());
+			m2 = ($("#menit-on2 option:selected").val());
+			m3 = ($("#menit-on3 option:selected").val());
+			m4 = ($("#menit-on4 option:selected").val());
+			m5 = ($("#menit-on5 option:selected").val());
+			m6 = ($("#menit-on6 option:selected").val());
+			m7 = ($("#menit-on7 option:selected").val());
 			
-			lampu[0].menitoff = ($("#menit-off0 option:selected").val()).toString();
-			lampu[1].menitoff = ($("#menit-off1 option:selected").val()).toString();
-			lampu[2].menitoff = ($("#menit-off2 option:selected").val()).toString();
-			lampu[3].menitoff = ($("#menit-off3 option:selected").val()).toString();
-			lampu[4].menitoff = ($("#menit-off4 option:selected").val()).toString();
-			lampu[5].menitoff = ($("#menit-off5 option:selected").val()).toString();
-			lampu[6].menitoff = ($("#menit-off6 option:selected").val()).toString();
-			lampu[7].menitoff = ($("#menit-off7 option:selected").val()).toString();
+			mf0 = ($("#menit-off0 option:selected").val());
+			mf1 = ($("#menit-off1 option:selected").val());
+			mf2 = ($("#menit-off2 option:selected").val());
+			mf3 = ($("#menit-off3 option:selected").val());
+			mf4 = ($("#menit-off4 option:selected").val());
+			mf5 = ($("#menit-off5 option:selected").val());
+			mf6 = ($("#menit-off6 option:selected").val());
+			mf7 = ($("#menit-off7 option:selected").val());
 			
-			lampu[0].auto = $("#auto0").is(':checked') ? "1" : "0";
-			lampu[1].auto = $("#auto1").is(':checked') ? "1" : "0";
-			lampu[2].auto = $("#auto2").is(':checked') ? "1" : "0";
-			lampu[3].auto = $("#auto3").is(':checked') ? "1" : "0";
-			lampu[4].auto = $("#auto4").is(':checked') ? "1" : "0";
-			lampu[5].auto = $("#auto5").is(':checked') ? "1" : "0";
-			lampu[6].auto = $("#auto6").is(':checked') ? "1" : "0";
-			lampu[7].auto = $("#auto7").is(':checked') ? "1" : "0";
+			a0 = $("#auto0").is(':checked') ? 1 : 0;
+			a1 = $("#auto1").is(':checked') ? 1 : 0;
+			a2 = $("#auto2").is(':checked') ? 1 : 0;
+			a3 = $("#auto3").is(':checked') ? 1 : 0;
+			a4 = $("#auto4").is(':checked') ? 1 : 0;
+			a5 = $("#auto5").is(':checked') ? 1 : 0;
+			a6 = $("#auto6").is(':checked') ? 1 : 0;
+			a7 = $("#auto7").is(':checked') ? 1 : 0;
 			
 			//coba(j0);
-			update(lampu);
+			update(j0,j1,j2,j3,j4,j5,j6,j7,jf0,jf1,jf2,jf3,jf4,jf5,jf6,jf7,m0,m1,m2,m3,m4,m5,m6,m7,mf0,mf1,mf2,mf3,mf4,mf5,mf6,mf7,a0,a1,a2,a3,a4,a5,a6,a7);
+			//alert(a0);
 		});
 		
 		$("#cancel").click(function(){
@@ -191,7 +126,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center"><a color="#aae41e">Ruang Tamu</a></h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto0" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto0" align="center">
 							<input type="checkbox" name="autobox0" id="auto0" >
 						</div>
 		
@@ -248,7 +183,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Utama</h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto1" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto1" align="center">
 							<input type="checkbox" name="autobox1" id="auto1" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on1">
@@ -304,7 +239,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Utama</h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto2" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto2" align="center">
 							<input type="checkbox" name="autobox2" id="auto2">
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on2">
@@ -360,7 +295,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Kamar Anak</h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto3" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto3" align="center">
 							<input type="checkbox" name="autobox3" id="auto3" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on3">
@@ -416,7 +351,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Ruang Keluarga</h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto4" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto4" align="center">
 							<input type="checkbox" name="autobox4" id="auto4" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on4">
@@ -473,7 +408,7 @@ respond.min.js"></script>
 						<div class="col-xs-3 col-md-3 col-lg-3">
 							<h4 class="text-center">Dapur</h4>
 						</div>
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto5" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto5" align="center">
 							<input type="checkbox" name="autobox5" id="auto5" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on5">
@@ -531,7 +466,7 @@ respond.min.js"></script>
 							<h4 class="text-center">Garasi</h4>
 						</div>
 
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto6" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto6" align="center">
 							<input type="checkbox" name="autobox6" id="auto6" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on6">
@@ -589,7 +524,7 @@ respond.min.js"></script>
 							<h4 class="text-center">Taman Depan</h4>
 						</div>
 
-						<div class="col-xs-2 col-md-2 col-lg-2" id="auto7" align="center">
+						<div class="col-xs-2 col-md-2 col-lg-2" name="auto7" align="center">
 							<input type="checkbox" name="autobox7" id="auto7" >
 						</div>
 						<div class="col-xs-3 col-md-3 col-lg-3" id="on7">
